--- a/Project_ASC/pom.xml
+++ b/Project_ASC/pom.xml
@@ -72,6 +72,13 @@
           <version>1.3.2</version>
        </dependency>
        
+       <!-- SMTP -->
+       <dependency> 
+   		   <groupId>javax.mail</groupId> 
+ 		   <artifactId>mail</artifactId> 
+ 	       <version>1.4.7</version> 
+  	   </dependency>
+       
        <!-- JSON 처리를 위한 Jackson 라이브러리 -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
