--- a/Project_ASC/src/main/webapp/WEB-INF/web.xml
+++ b/Project_ASC/src/main/webapp/WEB-INF/web.xml
@@ -55,5 +55,16 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	  <!-- tld파일 설정 -->
+	  <jsp-config>
+ 		<taglib>
+        	<taglib-uri>urlDecode</taglib-uri>
+        	<taglib-location>/WEB-INF/tiles/decoder.tld</taglib-location>
+    	</taglib>
+  	</jsp-config> 
+	
+	
+	
 
 </web-app>
